# Ghost-Hunter

./: .gitignore  LICENSE.txt  README.md  app.py  pyproject.toml
gh/: __main__.py  merge.csv  pyproject.toml  selected_columns.csv  selected_columns_s.csv
gh/clean/: clean_impact.py  clean_npi.py  clean_scrap.py
gh/dashboard/: dashboard.py
gh/data_compilation/: __main__.py
gh/data_compilation/clean/: clean_npi.py  clean_scrap.py
gh/data_compilation/data_output/: total_retrieved_searches.json
gh/data_compilation/linkage/: final_data.py  match.py
gh/data_compilation/scrapers/county_care/: ccare_scrape_clean.py  ccare_scraper.py  utils.py
gh/data_compilation/scrapers/county_care/old_code/: old_code.py
gh/data_compilation/scrapers/county_care/search_parameters/: cook_county_coordinates_zips.json  zip_code_check.txt  zip_locations.py
gh/data_viz/: data_analysis  data_analysis.py  visualization.py  viz_graphs  viz_graphs.py
gh/gh/scrapers/aetna/: aetna_scraper.py
gh/linkage/: final_data.py  match.py
gh/scrapers/county care/: ccare_scrape.json  ccare_scraper.py  provider_scrape_test.json  utils.py
gh/scrapers/county_care/: ccare_scrape_clean.py  ccare_scraper.py  search_parameters.py  utils.py
gh/scrapers/county_care/old_code/: exploratory_functions.py  old_code.py
gh/scrapers/county_care/search_parameters/: cook_county_zips.txt  search_parameters.py  user_agents.py  zip_locations.py
