[tool.poetry]
name = "gh"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
lxml = "^5.1.0"
scrapy = "^2.11.0"
requests = "^2.31.0"
pandas = "^2.2.0"
googlemaps = "^4.10.0"
datetime = "^5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
